# scene_effect_tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  buildspec.json  spec.md  vcpkg.json
data/effects/: bloom.effect  blur.effect  cartoon.effect  crunch.effect  focus.effect  glitch.effect  insta_grade.effect  old_film.effect  pixel_art.effect  rain.effect  sepia.effect  vhs.effect
data/locale/: en-US.ini  ja-JP.ini
docs/: OBS-port-brief.md  rain-on-glass-v4.html
src/: plugin-main.c  sfx-common.c  sfx-common.h  sfx-render.c  sfx-render.h
src/filters/: bloom.c  cartoon.c  crunch.c  focus.c  glitch.c  insta-grade.c  old-film.c  pixel-art.c  rain.c  sepia.c  vhs.c
